Change times so there is no wrap text issue

--- a/appointments/appointment_available_times.css
+++ b/appointments/appointment_available_times.css
@@ -85,6 +85,7 @@ button {
 
 button:active {
 	opacity: 0.9;
+	background-color: white;
 }
 
 .marg {
